# cookbook

./: README.md  pyproject.toml
cookbook/cookbook/: asgi.py  settings.py  urls.py  wsgi.py
cookbook/recipes/: admin.py  models.py  serializers.py  urls.py  views.py
cookbook/recipes/migrations/: 0001_initial.py  0002_remove_recipe_user.py  0003_alter_recipeproduct_weight_in_grams.py
cookbook/templates/: recipes_without_prod.html
